# mega-workshop

./: .databricksignore  .gitignore  README.md  app.yaml  architecture.mmd  databricks.yml  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings_template.json
agent_server/: agent.py  start_server.py
client/: index.html
docs/: architecture.py
knowledge_base_md/: 5G_Connection_Troubleshooting.md  5G_Connection_Troubleshooting_Guide.md  5G_Connection_Troubleshooting_Policy.md  Account_Closure_Policy.md  Account_Management_Policy_Adding_a_Line_to_Existing_Service.md  Account_Management_Policy_Changing_Account_Details.md  Account_Merger_Policy.md  Account_Security_Management_Procedure.md  Account_Security_Policy.md  Account_Security_Protecting_Your_Telecom_Account.md  Account_Suspension_Management_Procedure.md  Account_Suspension_Process_User_Guide.md  Account_Transfer_Policy.md  Battery_Optimization_Guide_for_Mobile_Devices.md  Billing_Cycle_Change_Procedure_for_Telecom_Customer_Support.md  Billing_Error_Resolution_Policy.md  Billing_Error_Resolution_Procedure_for_Telecom_Customer_Support.md  Billing_Policy_Prepaid_vs._Postpaid_Service_Comparison.md  Bluetooth_Connectivity_Issues_Technical_Support_Policy.md  Bluetooth_Connectivity_Problems.md  Bluetooth_Connectivity_Problems_Troubleshooting_Guide.md  Complete_Guide_to_Call_Forwarding_Services.md  Complete_Guide_to_Mobile_Hotspot_Share_Your_Connection_Anywhere.md  Complete_Guide_to_Wi-Fi_Calling_Setup.md  Credit_Application_Policy.md  Customer_Bill_Payment_Options_Procedure.md  Data_Throttling_Policy.md  (+149 more)
(+24 files in other folders)
